--- a/app/assets/stylesheets/budgets/investments/form.scss
+++ b/app/assets/stylesheets/budgets/investments/form.scss
@@ -1,5 +1,36 @@
 .budget-investment-form {
 
+  .required-fields {
+    @include grid-row-nest;
+    @include grid-column-gutter;
+    @include full-width-background;
+    background: $light;
+    margin-bottom: $line-height;
+    padding-top: $line-height;
+  }
+
+  > fieldset > legend {
+    float: left;
+    font-size: rem-calc(36);
+    font-weight: bold;
+    margin-bottom: $line-height;
+    text-transform: uppercase;
+
+    + * {
+      clear: left;
+    }
+  }
+
+  select {
+    min-height: $line-height * 2;
+
+    @include breakpoint(medium) {
+      &:not(.js-add-language):not(.js-select-language) {
+        width: 50%;
+      }
+    }
+  }
+
   .translation-interface {
     @include grid-row-nest;
     @include grid-column-gutter;
@@ -12,6 +43,21 @@
 
   [type="submit"] {
     @include regular-button;
-    width: 100%;
+    font-size: map-get($button-sizes, large);
+    margin-top: $line-height;
+  }
+
+  .actions {
+    border: 6px solid $border;
+    border-radius: rem-calc(12);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: $line-height * 2;
+    padding: $line-height * 2 $line-height;
+    text-align: center;
+
+    @include breakpoint(medium) {
+      width: 75%;
+    }
   }
 }
