Add padding to the whole header
Instead of adding the padding to each individual element inside the
container, why not adding padding to the container itself? The answer is
"because we want the background of the children elements to take the
width of the whole screen". But this generates either HTML cluttered
with elements to add padding or repetitive padding definitions in the
CSS.

So now we only define the padding once, and when an element requires a
full width background or border, we use the `full-width-background`
mixin.

In this case the code is a bit more complex because the header is also
used in the dashboard and admin layouts:

* In the public layout, the body has a margin, so we include the mixin
  to take margin into account
* In the dashboard layout, the header itself has a margin, so we include
  the same mixin
* In the admin layout, the headet doesn't have a margin but gets the
  whole width, so in this case we include the mixin which dosen't take
  the margin into account

In the future, the idea is to apply this principle to the <body>
element and remove the `@include grid-column-gutter` in the CSS as well
as the `small-12 column` classes in the HTML.

Note we use the `calc()` function inside the mixin instead of using it
in the `$full-width-margin` variable. That way we avoid nested `calc()`
operations, which don't work in Internet Explorer.

Also note we're using `flex-grow: 1` to make one element appear on the
left of the screen and the other one on the right. It would be easier to
use `justify-content: space-between` (which is actually the default for
the top-bar element). However, there's a bug in Internet Explorer and
old versions of Firefox; they include the absolutely-positioned
`::before` element we use to set the full width background when
calculating where to position the elements. The bug was fixed in Firefox
52 (released in 2017).

--- a/app/assets/stylesheets/mixins/layouts.scss
+++ b/app/assets/stylesheets/mixins/layouts.scss
@@ -23,7 +23,7 @@
   }
 }
 
-@mixin full-width-cover {
+@mixin full-width-cover($margin: true, $gutter: false) {
   bottom: 0;
   content: "";
   display: block;
@@ -33,27 +33,43 @@
   right: 0;
   top: 0;
 
+  @if $gutter {
+    @include -zf-each-breakpoint {
+      $padding: rem-calc(-zf-get-bp-val($grid-column-gutter, $-zf-size)) / 2;
+
+      left: -$padding;
+      right: -$padding;
+    }
+  }
+
   @include breakpoint($global-width) {
-    left: $full-width-margin;
-    right: $full-width-margin;
+    $global-padding: rem-calc(map-get($grid-column-gutter, medium)) / 2;
+
+    @if $gutter and $margin {
+      left: calc(#{$full-width-margin} - #{$global-padding});
+      right: calc(#{$full-width-margin} - #{$global-padding});
+    } @else if $margin {
+      left: calc(#{$full-width-margin});
+      right: calc(#{$full-width-margin});
+    }
   }
 }
 
-@mixin full-width-background {
+@mixin full-width-background($margin: true, $gutter: false) {
   position: relative;
 
   &::before {
-    @include full-width-cover;
+    @include full-width-cover($margin: $margin, $gutter: $gutter);
     background: inherit;
     z-index: -1;
   }
 }
 
-@mixin full-width-border($position, $border) {
+@mixin full-width-border($position, $border, $margin: true, $gutter: false) {
   position: relative;
 
   &::after {
-    @include full-width-cover;
+    @include full-width-cover($margin: $margin, $gutter: $gutter);
     border-#{$position}: $border;
   }
 }
