--- a/app/assets/stylesheets/participation.scss
+++ b/app/assets/stylesheets/participation.scss
@@ -137,6 +137,7 @@
     border: 1px solid lighten($proposals, 35%);
     height: rem-calc(14);
     position: relative;
+    visibility: hidden;
 
     .meter {
       background: $proposals;
@@ -158,6 +159,7 @@
 
   abbr {
     color: $text-medium;
+    visibility: hidden;
 
     &[title] {
       border-bottom: 0;
