--- a/app/components/sdg/goals/index_component.html.erb
+++ b/app/components/sdg/goals/index_component.html.erb
@@ -5,7 +5,7 @@
     <%= render "shared/header", header: header %>
   <% else %>
     <header class="section-header">
-      <h1><%= title %></h1>
+      <h1> OBJETIVOS DE MOVILIDAD SOSTENIBLE<!--<%= title %>--> </h1>
     </header>
   <% end %>
 
