cambios interfaz e imagen ejes

--- a/app/views/legislation/processes/index.html.erb
+++ b/app/views/legislation/processes/index.html.erb
@@ -5,8 +5,8 @@
 <%= render "shared/section_header", i18n_namespace: "legislation.processes.index.section_header", image: "legislation_processes" %>
 
 <div class="row">
-  <div id="legislation" class="legislation-list small-12 medium-9 column">
-
+  <div id="legislation" class="legislation-list small-12 medium-12 column">
+    <img class="margin" alt="portada.jpg" src="/assets/ejes.png">
     <%= render "shared/filter_subnav", i18n_namespace: "legislation.processes.index" %>
 
     <div id="legislation-list">
