--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,16 +16,17 @@
       <div class="small-12 medium-6 column ">
         <span></span>
         <h1>Comparte tus ideas</h1>
-        <p class="">El Ministerio de Transportes, Movilidad y Agenda Urbana (MITMA) quiere dar respuesta a los retos en movilidad y transporte que nos plantea el siglo XXI con una Estrategia de Movilidad Segura, Sostenible y Conectada.
-
-El MITMA es consciente de que no puede abordar esta tarea en solitario, sino que debe necesariamente contar con la sociedad en su conjunto. Para ello, la Estrategia de Movilidad contempla la realización de un ambicioso proceso de participación pública entre cuyas actuaciones se integra la creación de este espacio en el que invitamos a la ciudadanía a enviarnos sus opiniones y propuestas.</p>
+        <p class="">CANTABRIA SE MUEVE es una Plataforma Participativa para entablar un diálogo social con la ciudadanía y los actores implicados en el ecosistema de movilidad. Se pretenden afrontar los retos futuros de la movilidad y el transporte en Cantabria para el establecimiento de estrategias de movilidad sostenible.  <br><br>
+Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad SEGURA, SOSTENIBLE Y CONECTADA en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
+<b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b>
+</p>
         <div class="small-12 medium-6 large-4 ">
           <a class="button expanded large" href="/help">¿Quieres participar?</a>
         </div>
       </div>
 
         <div class="small-12 medium-6 column">
-          <img class="margin" alt="portada.jpg" src="/esmovilidad/system/images/attachments/000/000/030/large/d1fee0342d02ec0bd399737d00ef0228002ee3ca.jpg">
+          <img class="margin" alt="portada.jpg" src="/assets/budget_execution_no_image.jpg">
         </div>
     </div>
   </div>
@@ -37,7 +38,7 @@ El MITMA es consciente de que no puede abordar esta tarea en solitario, sino que
   <a href="/legislation/processes">
     <figure class="figure-card">
       <div class="gradient"></div>
-        <img alt="encuesta2.JPG" src="/esmovilidad/system/images/attachments/000/000/035/large/d1fee0342d02ec0bd399737d00ef0228002ee3ca.JPG">
+        <img alt="encuesta2.JPG" src="/assets/logo_header.png">
       <figcaption>
         <br>
         <h3>Ejes de movilidad</h3>
@@ -51,14 +52,14 @@ El MITMA es consciente de que no puede abordar esta tarea en solitario, sino que
   <a href="/proposals">
     <figure class="figure-card">
       <div class="gradient"></div>
-        <img alt="Ideas_(1).jpg" src="/esmovilidad/system/images/attachments/000/000/034/large/d1fee0342d02ec0bd399737d00ef0228002ee3ca.jpg">
+        <img alt="Ideas_(1).jpg" src="/assets/logo_header.png">
       <figcaption>
         <br>
         <h3>Propuestas</h3>
       </figcaption>
     </figure>
-    <p class="description">En el Laboratorio de ideas te proponemos temas para que nos hagas llegar tu opinión y tus propuestas. ¡No dudes en participar!</p>
-    <p>¡Haz click aquí para acceder al laboratorio de ideas!</p>
+    <p class="description">Comparte tus propuestas, votan las de otros ciudadanos/as, y Valora y opina sobre las propuestas cerradas que los técnicos han incluido en esta web</p>
+    <p>¡Haz click aquí para acceder a las propuestas!</p>
 </a></div>
 </div>
 
