--- a/app/assets/stylesheets/participation.scss
+++ b/app/assets/stylesheets/participation.scss
@@ -137,7 +137,7 @@
     border: 1px solid lighten($proposals, 35%);
     height: rem-calc(14);
     position: relative;
-    visibility: hidden;
+    display: none;
 
     .meter {
       background: $proposals;
@@ -159,7 +159,7 @@
 
   abbr {
     color: $text-medium;
-    visibility: hidden;
+    display: none;
 
     &[title] {
       border-bottom: 0;
