--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,7 +38,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
   <a href="/legislation/processes">
     <figure class="figure-card">
       <div class="gradient"></div>
-        <%= image_tag(image_path_for("logo_header.png"), class: "float-left", alt: setting["org_name"]) %>
+        <%= image_tag(image_path_for("feve.jpg"), class: "float-left", alt: setting["org_name"]) %>
       <figcaption>
         <br>
         <h3>Ejes de movilidad</h3>
@@ -52,7 +52,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
   <a href="/proposals">
     <figure class="figure-card">
       <div class="gradient"></div>
-      <%= image_tag(image_path_for("logo_header.png"), class: "float-left", alt: setting["org_name"]) %>
+      <%= image_tag(image_path_for("bicis.jpg"), class: "float-left", alt: setting["org_name"]) %>
       <figcaption>
         <br>
         <h3>Propuestas</h3>
