--- a/app/views/pages/custom_page.html.erb
+++ b/app/views/pages/custom_page.html.erb
@@ -3,20 +3,102 @@
 
 <div class="row margin-top">
 
-  <div class="small-12 medium-9 column">
-    <h1><%= @custom_page.title %></h1>
-    <% if @custom_page.subtitle.present? %>
-      <h2><%= @custom_page.subtitle %></h2>
-    <% end %>
+  <div class="small-12 medium-12 column">
 
-    <%= auto_link_already_sanitized_html AdminWYSIWYGSanitizer.new.sanitize(@custom_page.content) %>
-  </div>
-
-  <% if @custom_page.print_content_flag %>
+    <h1>Condiciones de uso</h1>
+      <h2>AVISO LEGAL SOBRE LAS CONDICIONES DE USO, PRIVACIDAD Y PROTECCIÓN DE DATOS PERSONALES DEL PORTAL DE PARTICIPACIÓN DE MOVILIDAD DEL GOBIERNO DE CANTABRIA</h2>
+<% if @custom_page.print_content_flag %>
     <div class="small-12 medium-3 column">
       <%= render "/shared/print" %>
     </div>
   <% end %>
+    <h3>1. Ámbito de aplicación de las condiciones de uso</h3>
+
+<p>La participación (entendiéndola como participación activa más allá de la lectura del contenido presente) en el Portal de participación de Movilidad del Gobierno de Cantabria se regula por las presentes condiciones de uso que vinculan a todas las personas que participen en este sitio web. Por ello, cualquier persona que desee participar deberá registrarse, a cuyo fin se solicitará la aceptación de estas condiciones de uso.
+El Gobierno de Cantabria  se reserva la facultad de modificar las presentes condiciones de uso para la participación en el Portal de Movilidad del Gobierno de Cantabria cuya última versión se publicará en este sitio web.</p>
+
+<h3>
+2. Objetivo de la iniciativa</h3>
+
+<p>A través del Portal de participación, el portal de Movilidad del Gobierno de Cantabria quiere fomentar la participación de los ciudadanos en la Estrategia de Movilidad, implicándoles en la generación de ideas y propuestas novedosas y viables, con el objeto de mejorar la estrategia. Es una apuesta decidida por una gestión más cercana a los ciudadanos que permitirá recibir sus propuestas y además, crear canales directos de comunicación con el gobierno municipal, contribuyendo a tomar las decisiones más acertadas para el interés general.</p>
+
+<p>&nbsp;</p>
+
+<h3>3. Cuestiones generales sobre la participación en el portal de Movilidad del Gobierno de Cantabria </h3>
+
+<p>Podrá participar cualquier persona física a partir de los 16 años que se haya registrado previamente en el Portal de participación. Mediante la aceptación de estas condiciones de uso se declara tener 16 años o más. Los mayores de edad a cuyo cargo se encuentran los menores, son los plenos responsables de la actuación que tengan éstos en el Portal de participación. No existe limitación en cuanto al número de debates, comentarios o propuestas a presentar por los participantes.
+Al introducir el título de las propuestas, se recomienda escribir una descripción breve y precisa con un máximo de 2000 caracteres. Para completar la argumentación se podrán asociar documentos adjuntos o de las Redes Sociales Vimeo, Youtube, Slideshare, Flickr o SoundCloud.</p>
+
+<h3>&nbsp;</h3>
+
+<h3>4. Obligaciones de los usuarios del Portal de participación</h3>
+
+<p>Al ser el portal de Movilidad del Gobierno de Cantabria un punto de encuentro cuyo objetivo es debatir, y compartir y valorar propuestas relacionadas con la mejora de la movilidad, los usuarios están obligados a hacer un uso diligente y acorde a dicho objetivo.
+El portal de Movilidad del Gobierno de Cantabria no es responsable del uso incorrecto del Portal de participación por los usuarios o de los contenidos localizados en el mismo, siendo cada usuario responsable de su uso correcto y de la legalidad de los contenidos y opiniones que haya compartido.
+El portal de Movilidad del Gobierno de Cantabria  se reserva, por lo tanto, el derecho a limitar el acceso al portal de Movilidad del Gobierno de Cantabria de opiniones, informaciones, comentarios o documentos que los usuarios quieran incorporar, pudiendo instalar filtros a tal efecto. Todo ello se realizará únicamente mientras tenga el fin de preservar el objetivo fundamental del Portal de participación.
+De acuerdo a la normativa legal vigente queda prohibida la utilización del portal de Movilidad del Gobierno de Cantabria  con fines distintos a los de debatir, compartir y valorar propuestas, y específicamente:
+Compartir cualquier contenido que pueda ser considerado como una vulneración en cualquier forma de los derechos fundamentales al honor, imagen e intimidad personal y familiar de terceros o contra la dignidad de las personas.
+Compartir imágenes o fotografías que recojan imágenes o datos personales de terceros sin haber obtenido el oportuno consentimiento de sus titulares.
+Compartir cualquier contenido que vulnere el secreto en las comunicaciones, la infracción de derechos de propiedad industrial e intelectual o de las normas reguladoras de la protección de datos de carácter personal.
+Reproducir, distribuir, compartir contenidos, informaciones o imágenes que hayan sido puestas a disposición por otros usuarios sin la autorización expresa de estos.
+Su utilización con fines de publicidad.
+La realización de cualquiera de los anteriores comportamientos permitirá al portal de Movilidad del Gobierno de Cantabria  suspender temporalmente la actividad de un participante, inhabilitar su cuenta o borrar su contenido, sin perjuicio de otras responsabilidades que puedan ser reclamadas.
+En caso de que el contenido introducido por los usuarios incorpore un enlace a otro sitio web, el portal de Movilidad del Gobierno de Cantabria  no será responsable por los daños o perjuicios derivados del acceso al enlace o a sus contenidos.
+En caso de litigio de cualquier clase o por cualquier motivo entre los participantes en el sitio web y/o un tercero, el portal de Movilidad del Gobierno de Cantabria y sus promotores quedarán exentos de cualquier responsabilidad por reclamaciones, demandas o daños de cualquier naturaleza relacionados o derivados del litigio.</p>
+
+<h3>&nbsp;</h3>
+
+<h3>5. Uso del Portal de participación</h3>
+
+<p>Los participantes podrán acceder y navegar por el Portal de participación libremente y de forma anónima. Sólo cuando quieran realizar alguna acción que implique la creación, apoyo o comentario de una propuesta, o a la participación en un debate, se le solicitará que introduzca sus credenciales, para cuya obtención será necesario registrarse previamente. El registro que permitirá participar comentando en cualquiera de las secciones, creando debates o propuestas, se realizará introduciendo los siguientes datos:</p>
+
+<ul>
+  <li>Nombre de usuario</li>
+  <li>Correo electrónico</li>
+  <li>Aceptación de las condiciones de uso del Portal de participación</li>
+</ul>
+
+<p>Para participar apoyando propuestas, al usuario se le requerirá que verifique su cuenta cumpliendo que tiene 16 años o más.</p>
+
+<h3>&nbsp;</h3>
+
+<h3>6. Condiciones para el tratamiento de los contenidos proporcionados por los usuarios</h3>
+
+<p>Las presentes condiciones regulan los términos aplicables al contenido remitido por los usuarios de esta plataforma a través del formulario correspondiente (en adelante, el contenido). Estas condiciones se aplican tanto al contenido inicialmente remitido al Portal de participación como a cualquier contenido que se envíe con posterioridad o se manifieste al portal de Movilidad del Gobierno de Cantabria, debiendo significarse lo siguiente:</p>
+
+<ul>
+  <li>A. No Confidencialidad: Todo el contenido remitido por el usuario al portal de Movilidad del Gobierno de Cantabria  deberá ser susceptible de ser conocido por el público en general. Por lo tanto, el portal de Movilidad del Gobierno de Cantabria tratará el citado contenido como información no confidencial.</li>
+  <li>B. Procedimiento: En el caso de que el portal de Movilidad del Gobierno de Cantabria esté interesado en el contenido remitido por el usuario, se pondrá en contacto con él para solicitarle información adicional. Dicha información tendrá asimismo carácter de no confidencial, sin perjuicio de que en el caso de que las partes consideren la necesidad de intercambiarse información de carácter confidencial se firme el correspondiente Acuerdo de Confidencialidad. El portal de Movilidad del Gobierno de Cantabria  se reserva el derecho de no contactar con los usuarios que le hubieran remitido el contenido. Todo ello sin perjuicio de lo establecido en el apartado relativo a "Derechos de Propiedad Intelectual e industrial". En el supuesto que el portal de Movilidad del Gobierno de Cantabria, a su entera discreción, decidiera contactar con determinados usuarios, éstos conocen y aceptan que por ello el portal de Movilidad del Gobierno de Cantabria no adquiere compromiso alguno.</li>
+  <li>C. Publicidad o difusión de los contenidos presentados: Los participantes en el portal de Movilidad del Gobierno de Cantabria  declaran conocer y aceptar el hecho de que la información aportada podrá ser publicada en la web del gobierno, Universidad de Cantabria, así como a través de otros medios que la organización considere oportunos para dar a conocer esta iniciativa.</li>
+  <li>D. No devolución material: el portal de Movilidad del Gobierno de Cantabria carece de obligación alguna de devolver el Contenido remitido por los usuarios.</li>
+  <li>E. Procedimiento de aviso y retirada: el portal de Movilidad del Gobierno de Cantabria procesará las peticiones de eliminación o retirada de contenidos que incumplan las condiciones de uso que hayan añadido los participantes. Asimismo, cualquier persona, con motivos razonados si existe incumplimiento de las presentes condiciones de uso, podrá solicitar la retirada de contenidos al portal de Movilidad del Gobierno de Cantabria. El portal de Movilidad del Gobierno de Cantabria  se reserva el derecho de hacer las comprobaciones o verificaciones oportunas con carácter previo a la retirada de cualquier contenido.</li>
+</ul>
+
+<h3>&nbsp;</h3>
+
+<h3>7. Política de privacidad y protección de datos</h3>
+
+<ul>
+  <li>A. Titularidad de los derechos de propiedad intelectual e industrial: El usuario que aporta el Contenido declara, con la aceptación de las presentes Condiciones, ser titular de los derechos de propiedad intelectual y/o industrial u ostentar derechos suficientes sobre dicho contenido y que además lo remite al portal de Movilidad del Gobierno de Cantabria  de forma voluntaria para su divulgación en el portal de Movilidad del Gobierno de Cantabria. La titularidad de todos y cada uno de los Contenidos presentados que se encuentren protegidos o sean susceptibles de encontrarse protegidos, por el Derecho de la Propiedad Industrial e Intelectual, corresponde a los autores y/o titulares de los mencionados Contenidos. El portal de Movilidad del Gobierno de Cantabria  no asume responsabilidad alguna, ya sea directa o indirecta, respecto de cualquier tipo de controversia, disputa y/o litigio que pudiera derivarse de la publicación, divulgación y/o difusión de los contenidos aportados sin el preceptivo consentimiento de sus legítimos titulares. El portal de Movilidad del Gobierno de Cantabria  respetará todos los Derechos de Propiedad Intelectual o Industrial sobre el contenido remitido por los usuarios. Cualquier vulneración de los Derechos de Propiedad Intelectual o Industrial será responsabilidad de la persona que aporte el contenido. El portal de Movilidad del Gobierno de Cantabria , por la mera recepción del contenido, no recibe del usuario licencia alguna de propiedad intelectual o industrial, por lo que no hará uso del contenido salvo aceptación expresa de su titular.</li>
+  <li>B. Protección de datos: Los datos personales aportados por los usuarios que se registren en el Portal de participación, serán incorporados y tratados en el fichero/tratamiento "Gestión de Procesos Participativos", cuya finalidad y legitimidad está descrita en el aviso de protección de datos. El órgano responsable del fichero/tratamiento es la Dirección General de Participación Ciudadana, ante la que la persona interesada podrá ejercer los derechos de acceso, rectificación, cancelación y oposición, todo lo cual se informa en cumplimiento del artículo 13 del Reglamento Europeo de Protección de Datos.</li>
+</ul>
+
+<h3>&nbsp;</h3>
+
+<h3>8. Normativa aplicable</h3>
+
+<p>Las normas del ordenamiento jurídico español rigen de manera exclusiva estas condiciones de uso. Cualquier disputa, controversia o reclamación derivada de estas condiciones de uso, o el incumplimiento, rescisión o invalidación de estas, se resolverán exclusivamente ante los juzgados competentes.</p>
+
+<h3>&nbsp;</h3>
+
+<h3>9. Revisión de las condiciones de uso</h3>
+
+<p>El portal de Movilidad del Gobierno de Cantabria  se reserva el derecho de revisar las presentes condiciones de uso y la política de privacidad en cualquier momento y por cualquier razón. En dicho caso, los usuarios registrados serán avisados a través de este espacio en línea y, si continúan utilizando el Portal de participación, se entenderán aceptadas las modificaciones introducidas.</p>
+
+  </div>
+  </div>
+
+  
 
   <% if @cards.any? %>
     <div class="small-12 column">
