--- a/app/components/widget/feeds/participation_component.html.erb
+++ b/app/components/widget/feeds/participation_component.html.erb
@@ -1,6 +1,6 @@
 <div class="row margin-bottom feeds-list feeds-participation">
   <% feeds.each do |feed| %>
-    <% if feed_proposals?(feed) || feed_debates?(feed) %>
+    <% if feed_proposals?(feed)%>
       <%= render Widget::Feeds::FeedComponent.new(feed) %>
     <% end %>
   <% end %>
