--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -120,19 +120,19 @@
                     class: "button expanded" %>
 
         <div class="sidebar-divider"></div>
-        <h2 class="sidebar-title"><%= t("proposals.index.selected_proposals") %></h2>
+        <!--<h2 class="sidebar-title"><%= t("proposals.index.selected_proposals") %></h2>
         <br>
         <p class="small">
           <%= link_to t("proposals.index.selected_proposals_link"), proposals_path(selected: "all") %>
         </p>
 
         <% if params[:retired].blank? %>
-          <%= render "categories" %>
+          <%= render "categories" %>-->
           <%= render "shared/tag_cloud", taggable: "Proposal" %>
           <%= render "geozones" %>
         <% end %>
-        <%= render "retired" %>
-        <%= render "proposals_lists" %>
+        <!--<%= render "retired" %>
+        <%= render "proposals_lists" %>-->
       </aside>
     </div>
 
