--- a/app/assets/stylesheets/_consul_custom_overrides.scss
+++ b/app/assets/stylesheets/_consul_custom_overrides.scss
@@ -11,9 +11,9 @@
 // The variables you can override are defined in the
 // `_settings.scss` and `_consul_settings.scss` files.
 
-$brand: #58B75D;
-$primary-color: #58B75D;
-$button-background: #58B75D;
+$brand: #009300;
+$primary-color: #009300;
+$button-background: #009300;
 
 .progress small-12 round{
 	visibility: hidden;
