--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -18,10 +18,10 @@
 
 $admin-border-color: #d3d9dd;
 $admin-border:   2px solid $admin-border-color;
-$admin-color:    #245b80;
+$admin-color:    #009300;
 $admin-text:     #434d54;
 
-$sidebar:        #245b80;
+$sidebar:        #009300;
 $sidebar-hover:  #25597c;
 $sidebar-active: #f4fcd0;
 
