--- a/app/assets/stylesheets/legislation.scss
+++ b/app/assets/stylesheets/legislation.scss
@@ -6,6 +6,16 @@
 
 // 01. Sidebar menu
 // -----------------
+
+.no-display{
+  visibility: hidden;
+  height:1px;
+
+}
+.altura-btn{
+  max-height:200px;
+
+}
 .legislation-categories {
 
   .menu.simple {
