cambios colores sdg

--- a/app/assets/stylesheets/_consul_settings.scss
+++ b/app/assets/stylesheets/_consul_settings.scss
@@ -82,15 +82,15 @@ $off-screen-left: -1000rem !default;
 $sdg-icon-min-width: 40px !default;
 
 $sdg-colors: (
-  1: #e5243b,
-  2: #dda63a,
-  3: #4c9f38,
-  4: #c5192d,
-  5: #ff3a21,
-  6: #26bde2,
-  7: #fcc30b,
-  8: #a21942,
-  9: #fd6925,
+  1: #007aba,
+  2: #ffb600,
+  3: #442786,
+  4: #009924,
+  5: #fb1165,
+  6: #ff472b,
+  7: #0978b3,
+  8: #ff0e66,
+  9: #F4B23F,
   10: #dd1367,
   11: #fd9d24,
   12: #bf8b2e,
