--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -62,7 +62,6 @@
 
 // 1. Global
 // ---------
-
 $global-font-size: 100% !default;
 $global-width: rem-calc(1200) !default;
 $global-lineheight: 1.5 !default;
@@ -80,7 +79,7 @@ $black: #0a0a0a !default;
 $white: #fefefe !default;
 $body-background: $white !default;
 $body-font-color: $black !default;
-$body-font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif !default;
+$body-font-family: "Arial-sumlab", Helvetica, Roboto, Arial, sans-serif !default;
 $body-antialiased: true !default;
 $global-margin: 1rem !default;
 $global-padding: 1rem !default;
@@ -128,7 +127,7 @@ $block-grid-max: 8 !default;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: $body-font-family !default;
+$header-font-family: "Arial-sumlab" !default;
 $header-font-weight: $global-weight-normal !default;
 $header-font-style: normal !default;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace !default;
