cambios en la home

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,16 +17,21 @@
         <span></span>
         <h1>Comparte tus ideas</h1>
         <p class="">CANTABRIA SE MUEVE es una Plataforma Participativa para entablar un diálogo social con la ciudadanía y los actores implicados en el ecosistema de movilidad. Se pretenden afrontar los retos futuros de la movilidad y el transporte en Cantabria para el establecimiento de estrategias de movilidad sostenible.  <br><br>
-Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad SEGURA, SOSTENIBLE Y CONECTADA en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
-<b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b>
+Por todo ello os invitamos a participar para que juntos podamos construir los pilares de una movilidad <b>SEGURA, SOSTENIBLE Y CONECTADA</b> en Cantabria. Queremos escuchar vuestras propuestas, que opinéis sobre las nuestras, saber vuestros problemas y afrontar mediante el diálogo los retos futuros de la movilidad en nuestra región <br><br>
+<h4><b>¡PARTICIPA! ¡Construyamos juntos la movilidad sostenible de Cantabria!</b></h4><br>
+<b>¿CÓMO PUEDES PARTICIPAR?</b><br><br>
+<li><a href="/proposals">Compartiendo tus propuestas, votando las de otros ciudadanos/as, y Valorando y opinando sobre las propuestas cerradas que los técnicos han incluido en esta web.</a></li>
+<li><a href="/legislation/processes">Contándonos las ventajas y/o desventajas que aprecias en los nuevos modelos de movilidad planteados para el 2030.</a></li>
+<li><a href="/legislation/processes">Comentándonos tus problemas para desplazarte con el actual modelo de movilidad.</a></li>
+
 </p>
         <div class="small-12 medium-6 large-4 ">
-          <a class="button expanded large" href="/help">¿Quieres participar?</a>
+          <a class="button expanded large" href="/users/sign_up">¿Quieres participar?</a>
         </div>
       </div>
 
         <div class="small-12 medium-6 column">
-          <%= image_tag(image_path_for("budget_execution_no_image.jpg"), class: "margin", alt: setting["org_name"]) %>
+          <%= image_tag(image_path_for("home.png"), class: "margin", alt: setting["org_name"]) %>
         </div>
     </div>
   </div>
