--- a/app/views/layouts/dashboard/_proposal_totals.html.erb
+++ b/app/views/layouts/dashboard/_proposal_totals.html.erb
@@ -1,6 +1,6 @@
 <div class="dashboard-proposals-stats">
   <div class="row expanded">
-    <div class="small-12 medium-6 large-2 column">
+    <!--<div class="small-12 medium-6 large-2 column">
       <div class="counter">
         <div class="counter-value">
           <%= active_resources_for(proposal) %>
@@ -16,7 +16,7 @@
         <div class="counter-value"><%= number_with_delimiter(community_members_count, delimiter: ".") %></div>
         <span class="counter-label"><%= t("layouts.dashboard.proposal_totals.community") %></span>
       </div>
-    </div>
+    </div>-->
 
     <div class="change-behaviour">
       <div class="small-12 medium-6 large-4 column supports">
