--- a/app/views/layouts/dashboard/_proposal_totals.html.erb
+++ b/app/views/layouts/dashboard/_proposal_totals.html.erb
@@ -22,7 +22,7 @@
       <div class="small-12 medium-6 large-4 column supports">
         <div class="counter">
           <div class="counter-value">
-            <%= number_with_delimiter(proposal.votes_for.size, delimiter: ".") %>
+            <%= number_with_delimiter(proposal.total_votes, delimiter: ".") %>
             <!--/
             <%= number_with_delimiter(next_goal_supports, delimiter: ".") %>-->
           </div>
