EMS presentados de otra forma
* Texto intro en página inicial
* EMS no aparece en barra superior.
* Botones centrados.

--- a/app/views/shared/_subnavigation.html.erb
+++ b/app/views/shared/_subnavigation.html.erb
@@ -42,6 +42,7 @@
                                   accesskey: "5" %>
       </li>
     <% end %>
+    <!-- Quitamos SDG de lista superior
     <% if feature?(:sdg) %>
       <li>
         <%= layout_menu_link_to t("layouts.header.sdg"),
@@ -50,6 +51,7 @@
                                 accesskey: "6" %>
       </li>
     <% end %>
+    -->
     <% if feature?(:help_page) %>
       <li>
         <%= layout_menu_link_to t("layouts.header.help"),
