--- a/app/views/legislation/processes/index.html.erb
+++ b/app/views/legislation/processes/index.html.erb
@@ -37,7 +37,7 @@
         <p class="lead">
           <strong><%= t("legislation.processes.index.section_footer.title") %></strong>
         </p>
-        <p><%= t("legislation.processes.index.section_footer.description") %></p>
+        <p><%== t("legislation.processes.index.section_footer.description") %></p>
       </div>
     </div>
   </div>
