--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@ Por todo ello os invitamos a participar para que juntos podamos construir los pi
           <h4>Los ejes de movilidad sostenible</h4>
           <p> Son los 9 aspectos en torno a los que el <a href="https://esmovilidad.mitma.es/">Ministerio de Transportes, Movilidad y Agenda Urbana</a> ha estructurado la estrategia de movilidad para los próximos 10 años, buscando la coordinación y cooperación de todas las administraciones públicas, así como la participación ciudadana.</p>
         <div class="small-12 medium-6 large-4 " style="width: 50%;margin: 0 auto;">
-          <a class="button expanded large" href="/sdg/goals">Conocer los ejes de movilidad sostenible</a>
+          <a class="button expanded large" href="/sdg/goals">¡Conoce los ejes de movilidad sostenible para Cantabria!</a>
         </div>
         </div>
     </div>
