--- a/app/components/sdg/goals/index_component.html.erb
+++ b/app/components/sdg/goals/index_component.html.erb
@@ -4,7 +4,7 @@
   <% if header.present? %>
     <%= render "shared/header", header: header %>
   <% else %>
-    <header class="small-12 column help-header" data-magellan>
+    <header class="small-12 column help-header row" data-magellan>
       <h1 class="inline-block"> OBJETIVOS DE MOVILIDAD SOSTENIBLE<!--<%= title %>--> </h1>
       <div class="float-right-medium">
         <%= link_to t("Ir a los ejes de movilidad"), "/legislation/processes" %>
