--- a/app/views/shared/_subnavigation.html.erb
+++ b/app/views/shared/_subnavigation.html.erb
@@ -1,4 +1,5 @@
-<div class="small-12 medium-9 column">
+<div class="small-12 medium-12 column">
+  <div class="tabla-centrada">
   <ul>
     <%= raw content_block("subnavigation_left") %>
 
@@ -63,4 +64,5 @@
 
     <%= raw content_block("subnavigation_right") %>
   </ul>
+</div>
 </div>
