añadido boton inicio barra

--- a/app/views/shared/_subnavigation.html.erb
+++ b/app/views/shared/_subnavigation.html.erb
@@ -2,7 +2,14 @@
   <div class="tabla-centrada">
   <ul>
     <%= raw content_block("subnavigation_left") %>
-
+<li>
+<%= layout_menu_link_to 'Inicio',
+                                '/',
+                                controller_name == "welcome",
+                                accesskey: "0" %>
+        
+      </li>
+      
     <% if feature?(:debates) %>
       <li>
         <%= layout_menu_link_to t("layouts.header.debates"),
