cambios justificación y stringfs

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -381,6 +381,10 @@ a {
   display: inline-block;
 }
 
+li {
+text-align: justify;
+}
+
 .truncate-horizontal-text {
   overflow: hidden;
   text-overflow: ellipsis;
